package com.japhy.design.decorator;

/**
 * @author Japhy
 * @since 2021/2/24 14:15
 */
public interface Troll {

    void attack();

    int getAttackPower();

    void fleeBattle();

}
